# dsignals

./: .gitignore  setup.cfg
db/: eodhd-map.csv
src/eodhis_downloader/eodhd_map/: build_eodhd_map.py
src/eodhis_downloader/numerai/: download_eod_data.py
src/eodhis_downloader/quote_downloader/: download_quotes.py
