[metadata]
name = eodhis_downloader
description = this time we get rich quick for real
author = [degerhan](https://github.com/degerhan/dsignals), Vincenzo Timmel
#license = PRIVATE
#license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    eodhis_downloader
install_requires =
    pandas
    numpy
    tqdm
    numerapi
python_requires = >=3.8
package_dir =
    =src
zip_safe = no