[metadata]
name = eodhis_downloader
description = Downloader for EOD HIS data. Based on dsignals but wrapped as package.
author = [degerhan](https://github.com/degerhan/dsignals), Vincenzo Timmel
#license = PRIVATE
#license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    eodhis_downloader
install_requires =
    pandas
    numpy
    tqdm
    numerapi
python_requires = >=3.7
package_dir =
    =src
zip_safe = no